--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@capacitor/app": "6.0.0",
+    "@capacitor/cli": "^6.1.1",
+    "@capacitor/core": "^6.1.1",
+    "@capacitor/haptics": "6.0.0",
+    "@capacitor/keyboard": "6.0.1",
+    "@capacitor/status-bar": "6.0.0",
     "@ionic/core": "^8.2.5",
     "@ionic/vue": "^8.2.5",
     "@ionic/vue-router": "^8.2.5",
     "axios": "^1.7.2",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-router": "^4.0.0"
+  },
+  "devDependencies": {
+    "@nuxt/typescript-build": "^2.0.0",
+    "vue-loader": "^16.0.0"
   }
 }
