--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@capacitor/android": "^6.1.1",
     "@capacitor/app": "6.0.0",
-    "@capacitor/cli": "^6.1.1",
     "@capacitor/core": "^6.1.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
@@ -29,7 +28,9 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.1",
     "@nuxt/typescript-build": "^2.0.0",
+    "typescript": "^5.5.4",
     "vue-loader": "^16.0.0"
   }
 }
