--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,30 +19,17 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        distribution: 'adopt'
         java-version: '11'
 
-    - name: Set up Android SDK
+    - name: Install Android SDK
       uses: android-actions/setup-android@v2
-      with:
-        api-level: 31
-        build-tools: 31.0.0
-        ndk: 21.4.7075529
-
-    - name: Cache Gradle packages
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: ${{ runner.os }}-gradle
 
     - name: Build with Gradle
+      working-directory: android
       run: ./gradlew build
 
-    - name: Upload APK
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: app-release
-        path: app/build/outputs/apk/release/*.apk
+        name: app
+        path: android/app/build/outputs/apk/debug/
