--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,7 @@ name: Android CI
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
       - main
@@ -37,10 +37,25 @@ jobs:
     - name: Install Capacitor CLI
       run: npm install @capacitor/cli
 
-    - name: Sync Capacitor
-      run: npx cap sync
+    - name: Add Android platform
+      run: npx cap add android
 
-    - name: Build Android app
+    - name: Copy web assets
+      run: npx cap copy
+
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 30
+        build-tools: 30.0.3
+
+    - name: Build APK
       run: |
         cd android
-        ./gradlew build
+        ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-debug.apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
