--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -73,15 +73,12 @@ jobs:
         api-level: 30
         build-tools: 30.0.3
 
-    - name: List directories before build
-      run: ls -R
-
     - name: Build APK
       run: |
         cd android
         ./gradlew assembleDebug
 
-    - name: List directories after build
+    - name: List directory contents after build
       run: ls -R android/app/build/outputs/
 
     - name: Verify APK path and set environment variable
@@ -99,8 +96,36 @@ jobs:
       if: env.APK_PATH == 'not_found'
       run: exit 1
 
-    - name: Upload APK
+    - name: Upload APK as artifact
       uses: actions/upload-artifact@v2
       with:
         name: app-debug.apk
         path: ${{ env.APK_PATH }}
+
+  move-apk:
+    name: Move APK to Root
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Download APK artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: app-debug.apk
+        path: ./
+
+    - name: Move APK to root directory
+      run: mv app-debug.apk/app-debug.apk ./app-debug.apk
+
+    - name: Commit and push APK to repository
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        git add app-debug.apk
+        git commit -m "Add built APK to root directory"
+        git push origin develop
