apk move to root

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -117,8 +117,11 @@ jobs:
         name: app-debug.apk
         path: ./
 
+    - name: List downloaded artifact contents
+      run: ls -R
+
     - name: Move APK to root directory
-      run: mv app-debug.apk/app-debug.apk ./app-debug.apk
+      run: mv app-debug.apk ./app-debug.apk
 
     - name: Commit and push APK to repository
       env:
