--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,119 +10,114 @@ on:
 
 jobs:
   build:
-    name: Build Android
+    name: Build and Upload APK
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt'
-        java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
-    - name: Install Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build Nuxt app
-      run: npm run generate # Ensure the build command is correct
+      - name: Build Nuxt app
+        run: npm run generate # Ensure the build command is correct
 
-    - name: Install Capacitor CLI
-      run: npm install -g @capacitor/cli
+      - name: Install Capacitor CLI
+        run: npm install -g @capacitor/cli
 
-    - name: Check if Android platform exists
-      id: check-android
-      run: |
-        if [ -d "./android" ]; then
-          echo "exists=true" >> $GITHUB_ENV
-        else
-          echo "exists=false" >> $GITHUB_ENV
-        fi
+      - name: Check if Android platform exists
+        id: check-android
+        run: |
+          if [ -d "./android" ]; then
+            echo "exists=true" >> $GITHUB_ENV
+          else
+            echo "exists=false" >> $GITHUB_ENV
+          fi
 
-    - name: Add Android platform
-      if: env.exists == 'false'
-      run: npx cap add android
+      - name: Add Android platform
+        if: env.exists == 'false'
+        run: npx cap add android
 
-    - name: Sync Capacitor plugins
-      run: npx cap sync
+      - name: Sync Capacitor plugins
+        run: npx cap sync
 
-    - name: Copy web assets
-      run: npx cap copy
+      - name: Copy web assets
+        run: npx cap copy
 
-    - name: Ensure cordova.variables.gradle exists
-      run: |
-        if [ ! -f "./android/capacitor-cordova-android-plugins/cordova.variables.gradle" ]; then
-          mkdir -p ./android/capacitor-cordova-android-plugins
-          echo "ext {" > ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
-          echo "    // Add any Cordova variables here" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
-          echo "    // Example:" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
-          echo "    // someVariableName = \"someValue\"" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
-          echo "}" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
-        fi
+      - name: Ensure cordova.variables.gradle exists
+        run: |
+          if [ ! -f "./android/capacitor-cordova-android-plugins/cordova.variables.gradle" ]; then
+            mkdir -p ./android/capacitor-cordova-android-plugins
+            echo "ext {" > ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
+            echo "    // Add any Cordova variables here" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
+            echo "    // Example:" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
+            echo "    // someVariableName = \"someValue\"" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
+            echo "}" >> ./android/capacitor-cordova-android-plugins/cordova.variables.gradle
+          fi
 
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v2
-      with:
-        api-level: 30
-        build-tools: 30.0.3
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 30
+          build-tools: 30.0.3
 
-    - name: Build APK
-      run: |
-        cd android
-        ./gradlew assembleDebug
+      - name: Build APK
+        run: |
+          cd android
+          ./gradlew assembleDebug
 
-    - name: List directory contents after build
-      run: ls -R android/app/build/outputs/
+      - name: List directory contents after build
+        run: ls -R android/app/build/outputs/
 
-    - name: Verify APK path and set environment variable
-      id: verify-apk-path
-      run: |
-        if [ -f "android/app/build/outputs/apk/debug/app-debug.apk" ]; then
-          echo "APK_PATH=android/app/build/outputs/apk/debug/app-debug.apk" >> $GITHUB_ENV
-        elif [ -f "android/app/build/outputs/debug/app-debug.apk" ]; then
-          echo "APK_PATH=android/app/build/outputs/debug/app-debug.apk" >> $GITHUB_ENV
-        else
-          echo "APK_PATH=not_found" >> $GITHUB_ENV
-        fi
+      - name: Verify APK path and set environment variable
+        id: verify-apk-path
+        run: |
+          if [ -f "android/app/build/outputs/apk/debug/app-debug.apk" ]; then
+            echo "APK_PATH=android/app/build/outputs/apk/debug/app-debug.apk" >> $GITHUB_ENV
+          elif [ -f "android/app/build/outputs/debug/app-debug.apk" ]; then
+            echo "APK_PATH=android/app/build/outputs/debug/app-debug.apk" >> $GITHUB_ENV
+          else
+            echo "APK_PATH=not_found" >> $GITHUB_ENV
+          fi
 
-    - name: Fail if APK not found
-      if: env.APK_PATH == 'not_found'
-      run: exit 1
+      - name: Fail if APK not found
+        if: env.APK_PATH == 'not_found'
+        run: exit 1
 
-    - name: Upload APK as artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: app-debug.apk
-        path: ${{ env.APK_PATH }}
+      - name: Upload APK as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-debug.apk
+          path: ${{ env.APK_PATH }}
 
-  move-apk:
-    name: Move APK to Root
-    runs-on: ubuntu-latest
-    needs: build
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Configure AWS CLI
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+          aws configure set default.region us-east-1 # Change region if necessary
 
-    - name: Download APK artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: app-debug.apk
-        path: ./
-
-    - name: Commit and push APK to repository
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add app-debug.apk
-        git commit -m "Add built APK to root directory"
-        git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:develop
+      - name: Upload APK to S3
+        env:
+          APK_PATH: ${{ env.APK_PATH }}
+        run: |
+          aws s3 cp $APK_PATH s3://your-s3-bucket-name/path/to/apk/app-debug.apk --acl public-read
