--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "axios": "^1.7.2",
     "node-gyp": "^10.2.0",
     "nuxt": "^3.12.4",
-    "vue": "latest",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.1",
-    "@nuxt/typescript-build": "^2.0.0",
     "typescript": "^5.5.4",
-    "vue-loader": "^16.0.0"
+    "vite": "latest"
   }
 }
