--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic/vue": "^8.2.5",
     "@ionic/vue-router": "^8.2.5",
     "axios": "^1.7.2",
+    "flowbite": "^2.4.1",
     "node-gyp": "^10.2.0",
     "nuxt": "^3.12.4",
     "vue": "^3.0.0",
