--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@ionic/core": "^8.2.5",
     "@ionic/vue": "^8.2.5",
     "@ionic/vue-router": "^8.2.5",
